# sdk_to_mcp

./: .gitignore  .gitmodules  README.md  SDK_TO_MCP_V2_IMPLEMENTATION_REPORT.md  SKILL.md  asset_bundle.py  baptism_of_fire_test.py  critic_agent.py  embodied_asset_bundle.py  llm_client.py  registry_manifest.json  ros2_interface_parser.py  sdk-to-mcp_项目开发指南.md  sdk-to-mcp_项目开发指南.md.0  sdk_to_mcp_core.py  self_healing_generator.py  self_healing_generator_v2.py
.claude-flow/data/: auto-memory-store.json  graph-state.json  pending-insights.jsonl  ranked-context.json
.claude-flow/sessions/: current.json
clawhub_data/: robots.ts  stats.ts
sdk/realsense/: README.md  bridge_reference.py
sdk/realsense/examples/: basic_capture.py  point_cloud_export.py
sdk/xianfei/: README.md  gcu_gimbal_control.py
skills/sdk_to_mcp/: README.md  SKILL.md  main.py  pyproject.toml  requirements.txt  test_runner.py
skills/sdk_to_mcp/core/: __init__.py  analyzer.py  generator.py  validator.py
skills/sdk_to_mcp/templates/: base_mcp.jinja2  dds_mcp.jinja2  http_mcp.jinja2  ros_mcp.jinja2  serial_mcp.jinja2
src/ingestor/: __init__.py  ros2_interface_parser.py
src/publisher/: __init__.py  hub_sync.py
templates/: system_prompt_v2.txt
templates/golden/: moveit2_mcp_golden.py  nav2_mcp_golden.py
